# Grocery-Scout

./: .dockerignore  .gitignore  Dockerfile  JSON_data.py  README.MD  alembic.ini  data.json  database.py  price_grabber.py  product_url.txt  pyproject.toml  pytest.ini  requirements.txt  sample_data.json
.github/workflows/: docker-build.yml
alembic/: env.py
alembic/versions/: 711dc59717af_create_users_and_oauth_accounts_table.py  98cee3be64f4_add_unit_price_columns_to_province_.py  a35124285397_initial_migration.py
app/: database.py  main.py
app/models/: __init__.py  metro_cookie.py  province_price.py  store_product.py
app/routers/: __init__.py  auth.py  prices.py  products.py  province_prices.py  stores.py  users.py
app/schemas/: metro_cookie.py  province_price.py  store_product.py
app/services/: auth.py  cookies.py  geocode.py  prices.py  products.py  province_prices.py  stores.py  users.py
app/tests/: test_products.py
backend/: alembic.ini  celery_app.py  database.py  main.py  tasks.py
backend/alembic/: env.py
backend/core/: config.py  exceptions.py  security.py
backend/dependencies/: auth.py  db.py
backend/middleware/: rate_limit.py
backend/models/: __init__.py  metro_cookie.py  province_price.py  store_product.py  user.py
backend/routers/: auth.py  prices.py  products.py  province_prices.py  stores.py  users.py
backend/schemas/: province_price.py  store_product.py  user.py
backend/services/: auth.py  cookies.py  email.py  geocode.py  prices.py  (+7 more)
frontend/: next.config.ts  package-lock.json  package.json
scrapers/: db_writer.py
(+93 files in other folders)
