[project]
name = "grocery-scout"
version = "0.1.0"
description = "A grocery price comparison web application"
authors = [
    {name = "Osama Abdullah Bin Salim",email = "160643549+osamaaabdullah@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests (>=2.32.5,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false