[project]
name = "grocery-scout"
version = "0.1.0"
description = "A grocery price comparison web application"
authors = [
    {name = "Osama Abdullah Bin Salim",email = "160643549+osamaaabdullah@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.10, <4.0.0"
dependencies = [
    "fastapi[standard] (>=0.119.0,<0.120.0)",
    "psycopg2 (>=2.9.11,<3.0.0)",
    "pydantic (>=2.12.0,<3.0.0)",
    "sqlalchemy (>=2.0.44,<3.0.0)",
    "pyjwt (>=2.10.1,<3.0.0)",
    "googlemaps (>=4.10.0,<5.0.0)",
    "pwdlib[argon2] (>=0.2.1,<0.3.0)",
    "pytest (>=8.4.2,<9.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "alembic (>=1.17.0,<2.0.0)",
    "fastapi-mail (>=1.5.8,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false